--- a/index.html
+++ b/index.html
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
+
 <html lang = "pt-br">
+	<head>
+		<title> Equoterapia Rancho Alegre </title>
+		<metacharset = "utf-8">
+		<meta name = "Descrição" content = "Teste"> 
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+		<link rel = "stylesheet" href = "style.css">
+	    	
+	</head>
 
-<head>
-	<metacharset = "UTF-8">
-	<title> Equoterapia Rancho Alegre </title>
-</head>
+	<body>
+		<h1> Equoterapia Rancho Alegre </h1>
+		<h2> Quem somos nós? </h2>
+		<p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? </p>
 
-<body>
-	<h1> Oi meu amor!</h1>
-	<p>Este é um teste, apenas.</p>
-</body>
+		<center>
+		<img src = "https://as2.ftcdn.net/v2/jpg/06/39/29/73/1000_F_639297360_DgV0m4rsvVA3qioW8dydRBCXx0x2Ml4P.jpg" 
+		title = "Equoterapia"
+		alt = "Equoterapia">
+		</center> 
 
+		<nav class = "menu-lateral">
+			<div class = "btn-expandir">
+				<i class="bi bi-list-task"></i>
+			</div>
+
+		<ul>
+			<li class = "item-menu">
+				<a href = "#">
+					<span class = "icon"> <i class="bi bi-house-door"></i> </span>
+					<span class = "txt-link">Início</span>
+				</a>	
+			</li>
+			
+			<li class = "item-menu">
+				<a href = "#">
+					<span class = "icon"> <i class="bi bi-calendar-week"></i> </span>
+					<span class = "txt-link"> Agenda </span>
+				</a>	
+			</li>
+				
+			<li class = "item-menu">
+				<a href = "#">
+					<span class = "icon"> <i class="bi bi-telephone-inbound-fill"></i> </span>
+					<span class = "txt-link"> Contato </span>
+				</a>	
+			</li>		
+
+		</ul>
+
+		</nav>	
+			
+	</body>
 </html>
